# AIAgentSkeleton

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
aiagent/: constants.py
aiagent/agents/: agent_orchestrator.py  agent_state.py  facade.py  prompt_builder.py
aiagent/config/: loader.py  schemas.py
aiagent/core/: factory.py
aiagent/ports/: inference_model.py
aiagent/schemas/: agent_io.py
aiagent/tools/: tool_registry.py
app/adapters/: http_inference_client.py
app/agent/: conversation_store.py
app/api/: routes.py
app/core/: config.py  dependencies.py
docs/: INTEGRATION_GUIDE.md
frontend/: index.html
tests/: test_agent_core.py
