[project]
name = "agent-ai-skeleton"
version = "0.1.0"
description = "AI Agent Service Skeleton - LangGraph + FastAPI"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework & Server ──────────────────────────────
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",

    # ── HTTP Client (외부 모델 API 호출) ─────────────────────
    "httpx>=0.27.0",

    # ── Configuration & Environment ─────────────────────────
    "pydantic>=2.7,<3",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",

    # ── Agentic AI ──────────────────────────────────────────
    "langgraph==0.2.65",
    "langchain==0.3.0",
    "langchain-openai==0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
# 애플리케이션 저장소이므로 프로젝트 자체를 빌드/설치하지 않고 의존성만 관리한다.
# (aiagent/ · app/ 는 저장소 루트에서 직접 import)
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
